# snark-compose

./: Cargo.toml  README.md
proof-aggregation/: Cargo.toml
proof-aggregation/src/: base_circuit.rs  fibonacci.rs  lib.rs
proof-aggregation/src/base_circuit/: fibonacci.rs  sum.rs
proof-aggregation/tests/: test_base_circuit.rs
